adding company name

--- a/theSite/skins/templates/skins/home.html
+++ b/theSite/skins/templates/skins/home.html
@@ -23,7 +23,7 @@ h1{font-size:138.5%;}h2{font-size:123.1%;}h3{font-size:108%;}h1,h2,h3{margin:1em
   <body>
     <div class="yui-t1" id="doc3">
       <div id="hd">
-        <h1>PAGE HEADER (will, ideally, have a nice graphic to go here)</h1>
+        <h1>SKINS ALIVE</h1>
       </div>
       <div id="bd">
         <div id="yui-main">
